// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate (integration) > formats maps date-time to Date in petstore 1`] = `
"/**
 * Petstore
 *
 * @version 1.0.0
 * @generated by openapi-shape.
 */

export interface Endpoints {
  /**
   * @summary List pets
   * @description Returns all pets, optionally limited.
   */
  "GET /pets": {
    params: void
    query: {
      /** @description Max number of results */
      limit?: number
    }
    body: void
    response: Schemas.Pet[]
  }
  /** @summary Create a pet */
  "POST /pets": {
    params: void
    query: void
    body?: Schemas.CreatePet
    response: Schemas.Pet
  }
  "GET /pets/{petId}": {
    params: { petId: string }
    query: void
    body: void
    response: Schemas.Pet
  }
  /** @deprecated */
  "DELETE /pets/{petId}": {
    params: { petId: string }
    query: void
    body: void
    response: void
  }
}

export namespace Schemas {
  /** @description Lifecycle status of a pet */
  export type PetStatus = "available" | "pending" | "sold"

  /** @description A pet in the store */
  export interface Pet {
    /** @description Unique identifier */
    id: number
    /** @description Display name */
    name: string
    tag?: string
    status?: PetStatus
  }

  export interface CreatePet {
    name: string
    tag?: string
  }
}
"
`;

exports[`generate (integration) > generates correct output for 3.0.x fixture 1`] = `
"/**
 * OpenAPI 3.0 Differences
 *
 * @version 1.0.0
 * @generated by openapi-shape.
 */

export namespace Schemas {
  export type NullableString = string | null

  export interface Foo {
    name: string | null
    age?: number | null
  }
}
"
`;

exports[`generate (integration) > generates correct output for 3.1.x fixture 1`] = `
"/**
 * OpenAPI 3.1 Differences
 *
 * @version 1.0.0
 * @generated by openapi-shape.
 */

export namespace Schemas {
  export type NullableString = string | null

  export interface Foo {
    name: string | null
    age?: number | null
    tuple?: [string, number]
  }
}
"
`;

exports[`generate (integration) > generates correct output for discriminator fixture 1`] = `
"/**
 * Discriminator
 *
 * @version 1.0.0
 * @generated by openapi-shape.
 */

export interface Endpoints {
  "GET /animal": {
    params: void
    query: void
    body: void
    response: Schemas.Animal
  }
}

export namespace Schemas {
  export type Animal = Cat | Dog

  export type Vehicle = Car | Truck

  export interface Cat {
    type: "cat"
    purr: string
  }

  export interface Dog {
    bark: string
    type: "dog"
  }

  export interface Car {
    wheels?: number
    type: "Car"
  }

  export interface Truck {
    payload?: number
    type: "Truck"
  }
}
"
`;

exports[`generate (integration) > generates correct output for edge-cases fixture 1`] = `
"/**
 * Edge Cases
 *
 * @version 1.0.0
 * @generated by openapi-shape.
 */

export interface Endpoints {
  "GET /items": {
    params: void
    query: { q: string }
    body: void
    response: Schemas.Item[]
  }
  "GET /items/{itemId}": {
    params: { itemId: string }
    query: void
    body: void
    response: Schemas.Item
  }
  "GET /health": {
    params: void
    query: void
    body: void
    response: void
  }
}

export interface Webhooks {
  /**
   * @summary Fired when a new item is created
   * @deprecated
   */
  "POST item.created": {
    query: void
    payload: Schemas.Item
    reply: boolean
  }
}

export namespace Schemas {
  export type ItemKind = "book" | "movie" | "music"

  export type Shape = Circle | Square

  export type Extended = Circle & {
    color: string
  }

  export interface Item {
    id: number
    name: string
    tags?: string[]
    metadata?: Record<string, string>
    kind?: ItemKind
  }

  export interface Circle {
    radius: number
  }

  export interface Square {
    side: number
  }
}
"
`;

exports[`generate (integration) > generates correct output for petstore fixture 1`] = `
"/**
 * Petstore
 *
 * @version 1.0.0
 * @generated by openapi-shape.
 */

export interface Endpoints {
  /**
   * @summary List pets
   * @description Returns all pets, optionally limited.
   */
  "GET /pets": {
    params: void
    query: {
      /** @description Max number of results */
      limit?: number
    }
    body: void
    response: Schemas.Pet[]
  }
  /** @summary Create a pet */
  "POST /pets": {
    params: void
    query: void
    body?: Schemas.CreatePet
    response: Schemas.Pet
  }
  "GET /pets/{petId}": {
    params: { petId: string }
    query: void
    body: void
    response: Schemas.Pet
  }
  /** @deprecated */
  "DELETE /pets/{petId}": {
    params: { petId: string }
    query: void
    body: void
    response: void
  }
}

export namespace Schemas {
  /** @description Lifecycle status of a pet */
  export type PetStatus = "available" | "pending" | "sold"

  /** @description A pet in the store */
  export interface Pet {
    /** @description Unique identifier */
    id: number
    /** @description Display name */
    name: string
    tag?: string
    status?: PetStatus
  }

  export interface CreatePet {
    name: string
    tag?: string
  }
}
"
`;

exports[`generate (integration) > generates correct output for refs-and-edges fixture 1`] = `
"/**
 * Edges
 *
 * @version 1.0.0
 * @generated by openapi-shape.
 */

export interface Endpoints {
  "GET /tasks/{taskId}": {
    params: { taskId: string }
    query: { page?: number }
    body: void
    response: Schemas.Task
  }
  "PATCH /tasks/{taskId}": {
    params: { taskId: string }
    query: void
    body?: Schemas.Task
    response: void
  }
}

export namespace Schemas {
  export interface Task {
    id: string
    kind?: "task"
    "user-id"?: string
  }

  export interface User_Profile {
    name?: string
  }
}
"
`;
